# emu-8080

./: .gitignore  CONTROLS.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml  rust.yml
benches/: bench.rs
src/: arithmetic_instructions.rs  base_test_functions.rs  bit_operations.rs  branch_instructions.rs  cpu_tests.rs  disassembler.rs  lib.rs  logical_instructions.rs  machine.rs  main.rs  runner.rs  stack_instructions.rs  transfer_instructions.rs
tests/: cpu_tests.rs  unit_tests.rs
