[package]
name = "emu-8080"
version = "1.0.0"
authors = ["Michael Winkworth <mwinkwo@btinternet.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
enum-map = "2.7.3"
sdl2 = { version = "0.35.2", features = ["mixer"] }
log = "0.4.22"
env_logger = "0.11.5"

[dev-dependencies]
mutagen = { git = "https://github.com/llogiq/mutagen" }
