[package]
name = "emu-8080"
version = "1.0.0"
authors = ["Michael Winkworth <mwinkwo@btinternet.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
enum-map = "2.7.3"
log = "0.4.27"
env_logger = "0.11.6"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["mixer", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "2025.10.17"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[dev-dependencies]
# mutagen = { git = "https://github.com/llogiq/mutagen" }
